--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   </head>
   <body>
     <header>
-      <div class="header-container">
+      <div class="header-container bg-black">
         <a class="logo" href="index.html"><h1>Krisna Yuda</h1></a>
 
         <nav>
